fixed some css spacing and paddings

--- a/food-cards.css
+++ b/food-cards.css
@@ -90,17 +90,17 @@ body.light-theme {
 }
 
 .type {
-    padding: 5px 5px;
+       padding: 5px 5px;
     background: gray;
     color: black;
-    width: 70px;
+    width: fit-content;
     text-align: center;
     margin-top: -30px;
     margin-left: 220px;
     border-radius: 20px;
     font-size: medium;
     font-weight: bold;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.
 }
 
 .food h3 {
