--- a/index.css
+++ b/index.css
@@ -71,7 +71,8 @@ header {
 }
 
 h1 {
-    font-size: 16px;
+        font-size: 25px;
+    padding-left: 30px;
 }
 
 header i {
@@ -307,9 +308,13 @@ main{
     white-space: nowrap;
 }
 .nav__header--title{
-    font-size: 16px;
+	font-size: 25px;
+    padding-left: 12px;
     font-weight: bold;
     color: rgb(57, 57, 57);
+}
+.fa-cart-shopping{
+	    padding-right: 20px;
 }
 .findIcon{
     width: 30px;
@@ -333,9 +338,10 @@ main{
 /* slide section */
 
 .slide{
-    margin-top: 50px;
+        margin-top: 50px;
     position: relative;
-    padding: 20px;
+    width: 129%;
+    padding: 13px 30px;
 }
 
 .slide__content{
